--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <header></header>
+    <!-- Logo sito web -->
+    <header>
+        <div>
+            <img class="logo" src="/assets/img/Logo.png" alt="Logo"><span class="logo">Toboolist</span>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
