Creato e stilizzato menù iniziale

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <!-- Sezione bottoni -->
+        <section>
+            <div id="container">
+                <button class="task"><span>Add Task</span></button>
+                <button class="task-2"><span>Add Section</span></button>
+            </div>
+            
+        </section>
         <section></section>
         <section></section>
         <section></section>
