Aggiunta prima parte lista

--- a/index.html
+++ b/index.html
@@ -17,15 +17,29 @@
     <main>
         <!-- Sezione bottoni -->
         <section>
-            <div id="container">
+            <div id="container-1">
                 <button class="task"><span>Add Task</span></button>
                 <button class="task-2"><span>Add Section</span></button>
             </div>
-            
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <section class="container-2">
+            <h5>New Task</h5>
+
+            <ul>
+                <li class="list"><span class="checkbox">&#10003;</span>Quarterly Newsletter</li>
+            </ul>
+
+        </section>
+
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
+
     </main>
 </body>
 </html>
