Completato new task

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h5>New Task</h5>
 
             <ul>
-                <li class="list"><span class="checkbox">&#10003;</span>Quarterly Newsletter</li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Quarterly Newsletter</span>&nbsp;<span class="category">Editorial</span></li>
             </ul>
 
         </section>
