--- a/index.html
+++ b/index.html
@@ -27,13 +27,19 @@
             <h5>New Task</h5>
 
             <ul>
-                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Quarterly Newsletter</span>&nbsp;<span class="category">Editorial</span></li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Quarterly Newsletter</span>&nbsp;<span class="category-1">Editorial</span></li>
             </ul>
 
         </section>
+        <section class="container-3">
+            <h5>Today</h5>
 
-        <section>
-
+            <ul>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Recruiting blog post</span>&nbsp;<span class="category-1">Editorial</span></li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Mobile app launch</span>&nbsp;<span class="category-2">Q1 Goals</span></li>
+                <li class="list"><span class="checkbox-1">&#10007;</span>&nbsp;&nbsp;<span class="content">Recruiting blogpost</span>&nbsp;<span class="category-1">Editorial</span></li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Mobile applaunch</span>&nbsp;<span class="category-2">Q1 Goals</span></li>
+            </ul>
         </section>
 
         <section>
