--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="task-2"><span>Add Section</span></button>
             </div>
         </section>
-
+<!-- Nuove task -->
         <section class="container-2">
             <h5>New Task</h5>
 
@@ -31,14 +31,15 @@
             </ul>
 
         </section>
+        <!-- Appuntamenti di oggi -->
         <section class="container-3">
             <h5>Today</h5>
 
             <ul>
                 <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Recruiting blog post</span>&nbsp;<span class="category-1">Editorial</span></li>
                 <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Mobile app launch</span>&nbsp;<span class="category-2">Q1 Goals</span></li>
-                <li class="list"><span class="checkbox-1">&#10007;</span>&nbsp;&nbsp;<span class="content">Recruiting blogpost</span>&nbsp;<span class="category-1">Editorial</span></li>
-                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Mobile applaunch</span>&nbsp;<span class="category-2">Q1 Goals</span></li>
+                <li class="list"><span class="checkbox-1">&#10007;</span>&nbsp;&nbsp;<span class="content">Recruiting blogpost</span>&nbsp;<span class="category-3">Recruiting</span></li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Summit update to mobile storefronts</span>&nbsp;<span class="category-4">Mobile</span></li>
             </ul>
         </section>
 
