--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <!-- Logo sito web -->
+<!-- Logo sito web -->
     <header>
         <div>
             <img class="logo" src="/assets/img/Logo.png" alt="Logo"><span class="logo">Toboolist</span>
         </div>
     </header>
     <main>
-        <!-- Sezione bottoni -->
+<!-- Sezione bottoni -->
         <section>
             <div id="container-1">
                 <button class="task"><span>Add Task</span></button>
@@ -31,19 +31,29 @@
             </ul>
 
         </section>
-        <!-- Appuntamenti di oggi -->
+<!-- Appuntamenti di oggi -->
         <section class="container-3">
             <h5>Today</h5>
 
             <ul>
                 <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Recruiting blog post</span>&nbsp;<span class="category-1">Editorial</span></li>
                 <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Mobile app launch</span>&nbsp;<span class="category-2">Q1 Goals</span></li>
-                <li class="list"><span class="checkbox-1">&#10007;</span>&nbsp;&nbsp;<span class="content">Recruiting blogpost</span>&nbsp;<span class="category-3">Recruiting</span></li>
+                <li class="list"><span class="checkbox-1">&#10007;</span>&nbsp;&nbsp;<span class="content">Interview John H.</span>&nbsp;<span class="category-3">Recruiting</span></li>
                 <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Summit update to mobile storefronts</span>&nbsp;<span class="category-4">Mobile</span></li>
             </ul>
-        </section>
 
-        <section>
+        </section>
+<!-- Appuntamenti in arrivo -->
+        <section class="container-3">
+            <h5>Upcoming</h5>
+
+            <ul>
+                <li class="list"><span class="checkbox-1">&#10007;</span>&nbsp;&nbsp;<span class="content">Schedule meeting with Alex</span>&nbsp;</li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Homepage refresh</span>&nbsp;<span class="category-5">Website</span></li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Onboard new Sales team members</span>&nbsp;<span class="category-6">Sales</span></li>
+                <li class="list"><span class="checkbox">&#10003;</span>&nbsp;&nbsp;<span class="content">Review editorial calendar</span>&nbsp;<span class="category-1">Editorial</span></li>
+            </ul>
+
 
         </section>
 
