Dopo correzione : piccoli aggiustamenti ai link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Logo sito web -->
     <header>
         <div>
-            <img class="logo" src="/assets/img/Logo.png" alt="Logo"><span class="logo">Toboolist</span>
+            <img class="logo" src="assets/img/Logo.png" alt="Logo"><span class="logo">Toboolist</span>
         </div>
     </header>
     <main>
